name:           snugio
version:        0.1-alpha
synopsis:       webmachine based HTTP library
description:
  Snugio is a webmachine based HTTP library which enables you to create
  an API adhering to the HTTP 1.1 protocol.

license:         BSD3
license-file:    LICENSE
author:          Petar Radošević
maintainer:      petar@wunki.org
build-type:      Simple
cabal-version:   >= 1.8
homepage:        http://www.snug.io
category:        Web

Library
  hs-source-dirs: src
  ghc-options:    -O2 -Wall

  build-depends:
    base                >= 4    && < 5,
    snap-core           >= 0.6  && < 0.9,
    snap-server         >= 0.6  && < 0.9,
    text                >= 0.11 && < 1.12,
    mtl                 >= 1    && < 2.2

  exposed-modules:
    Snugio.Core

source-repository head
  type:     git
  location: git://github.com/wunki/snugio.git